--- a/style.css
+++ b/style.css
@@ -1,42 +1,45 @@
-body,
-html {
-  width: 100%;
-'Montserrat', sans-serif;
-  background:  url(header.jpg) no-repeat center center fixed;
+html,
+body {
+  background: url(headerimage.jpg) no-repeat center center fixed; 
+  background-size: cover;
   height: 100%;
-  font-family:   -webkit-background-size:  cover;
-  -moz-background-size:  cover;
-  -e-background-size:  cover;
-  background-size:  cover;
-}
+  width: 100%;
+  font-family: 'Montserrat', sans-serif;
 
-h1 {
-  font-size:  2.5rem;
-  color:  #6c7884;
-  text-align:  center;
-}
-.laptop {
-  align: center;
 }
 
 hr {
-    margin: 20px auto;
-    color: #F05F44;
-    border: 3px solid #F05F44;
-    max-width: 65px;
-    opacity: 1;  
+  max-width: 65px;
+  border-width: 3px;
+  border-color: #F05F44; 
 }
 
-.btn {
-  font-weight:  700;
-  border-radius:  300px;
-  text-transform:  uppercase;
-}
-
-.btn-xl {
-  padding:  1rem 2rem;
+h1 {
+  font-size: 3rem; 
+  color: #e2dbdb;
 }
 
 .buffer {
-  height:  200px;
+  height: 10rem;
+}
+
+.btn {
+  font-weight: 700;
+  text-transform: uppercase;
+  border-radius: 300px;
+}
+
+.btn-primary {
+  background-color: #F05F44;
+  border-color: #F05F44; }
+
+.btn-primary:hover {
+  background-color: #ee4b08;
+  border-color: #ee4b08;
+  border-width: 4px;
+  cursor: pointer;
+}
+
+.btn-xl {
+  padding: 1rem 2rem; 
 }
