--- a/Net Ninja/ModernJavaScript/Lesson_78 Todos Project/styles.css
+++ b/Net Ninja/ModernJavaScript/Lesson_78 Todos Project/styles.css
@@ -17,6 +17,10 @@ input[type='text']:focus {
 .delete {
 	cursor: pointer;
 }
+
+.filtered{
+	display: none !important;
+}
 .logo {
     display: block;
     margin-left: auto;
